objects/ES_User__c.object
<CustomObject>
    <fields>
        <fullName>Business_Group_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Business Group Id</label>
        <referenceTo>SLP_Business_Group__c</referenceTo>
        <relationshipLabel>ES Users</relationshipLabel>
        <relationshipName>ES_Users</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Linked_In__c</fullName>
        <label>Linked In</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Profile_Wizard_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <description>updating the flag based on user action taken in the profile wizard</description>
        <label>Profile Wizard Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Region_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Region Id</label>
        <referenceTo>SLP_Region__c</referenceTo>
        <relationshipLabel>ES Users</relationshipLabel>
        <relationshipName>ES_Users</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Role_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Role ID</label>
        <referenceTo>SLP_Role__c</referenceTo>
        <relationshipLabel>ES Users</relationshipLabel>
        <relationshipName>ES_Users</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SLP_Bussiness_User__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SLP_Bussiness_User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Twitter__c</fullName>
        <label>Twitter</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User Id</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ES_Users</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>ES User</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ESU-{00000000}</displayFormat>
        <label>ES User ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ES Users</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>